syntax = "proto3";
package jimmy.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";

enum Environment {
  // All environments.
  ALL = 0;

  // The Google Cloud environment.
  GOOGLE_CLOUD = 1;

  // The emulator environment.
  EMULATOR = 2;
}

enum Type {
  // Automatically detect statement type.
  AUTOMATIC = 0;

  // The SQL is a DDL statement.
  DDL = 1;

  // The SQL is a DML statement.
  DML = 2;

  // The SQL is a partitioned DML statement.
  PARTITIONED_DML = 3;
}

// A SQL statement.
message Statement {
  // A SQL statement to execute.
  string sql = 1 [(buf.validate.field).required = true];

  // The environment in which to run the statement.
  Environment env = 2;

  // The type of statement.
  Type type = 3;

  // The file descriptor set for the statement.
  optional string file_descriptor_set = 4;
}

// A Jimmy migration file.
message Migration {
  // The DDL statements to execute.
  repeated Statement upgrade = 1;

  // The starting migration to squash.
  //
  // If the migration hasn't run yet then when an upgrade reaches
  // the squash ID it will jump directly to this migration,
  // skipping the in-between migrations.
  //
  // If the specified migration has already been run then this
  // migration will be skipped.
  optional int32 squash_id = 2;

  // The Protocol Buffers file descriptor sets for the migration.
  map<string, google.protobuf.FileDescriptorSet> file_descriptor_sets = 6;
}
